--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "apexcharts": "^3.36.0",
     "bootstrap": "^3.4.1",
     "ng-apexcharts": "^1.7.4",
+    "ngx-echarts": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.8"
